another new name

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 permalink:           pretty
 
 # Setup
-title:               true git
-tagline:             like the movie, I guess??
+title:               data rat!
+tagline:             nibbling away
 url:                 http://aawil.github.io
 paginate:            2
 baseurl:             ""
