change blog title again

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 permalink:           pretty
 
 # Setup
-title:               data rat!
-tagline:             nibbling away
+title:               computers are stupid
+tagline:             and terrible
 url:                 http://aawil.github.io
 paginate:            2
 baseurl:             ""
